# PxF-Framework-Core

./: .gitignore  .pre-commit-config.yaml  Core.py  Ideas.md  Pipfile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: tests.yaml
Core/: __init__.py  dispatcher.py  system.py  system_manager.py
Core/Expressions/: simple.py
Core/Heuristics/: Malloc.py  Memtrack.py  TypeCheck.py  __init__.py
Core/Interface/: Window.py  base.py  data.py  interfaces.py
Core/Locale/: __init__.py  interfaces.py
Core/Logging/: __init__.py
Core/Manager/: decorators.py  interfaces.py
Core/Managers/: interfaces.py
Core/Plugins/: __init__.py  base.py  factory.py  interfaces.py  loader.py
Core/Properties/: decorators.py  dispatcher.py  property.py  test.py
Core/System/: base.py  data.py  decorators.py  interfaces.py
Core/Systems/: data.py  decorators.py  interfaces.py
Core/Utils/: __init__.py  zip.py
Docs/: Interface Design Pattern.md
Documentation/Conduct/: REFERENCES.md
Documentation/Guidelines/: BRANCHES.md  CONTRIBUTING.md
Documentation/Project/: Interface.md
core/: __init__.py
core/framework/: __init__.py  dispatcher.py  system.py  system_manager.py
pxf_framework_core/: __init__.py
pxf_framework_core/framework/: __init__.py  dispatcher.py  flags.py  system_manager.py
tests/: __init__.py  mypy.sh  test_core.py
tests/expressions/: __init__.py  test_simple.py
tests/locale/: __init__.py  test_json.py
tests/manager/: __init__.py  test_class.py
tests/parsers/: __init__.py
tests/settings/: __init__.py  test_some.py
(+203 files in other folders)
