[tool.poetry]
name = "pxf-framework-core"
version = "0.1.0"
description = ""
authors = ["NewWars <miguasjpsilva@gmail.com>"]
readme = "README.md"
packages = [{include = "core"}]


[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "*"
events = "*"
memory-profiler = "*"


[tool.poetry.dev-dependencies]
pre-commit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
